tests/e2e/service_output_readonly2.story
http server
    when server listen
        server = 2
